fp-library/tests/ui/arc_free_explicit_bind_requires_send.stderr
error[E0277]: `Rc<i32>` cannot be sent between threads safely
  --> tests/ui/arc_free_explicit_bind_requires_send.rs:22:28
   |
22 |       let _bound = program.bind(move |x: i32| {
   |                            ---- ^------------
   |                            |    |
   |  __________________________|____within this `{closure@$DIR/tests/ui/arc_free_explicit_bind_requires_send.rs:22:28: 22:41}`
   | |                          |
   | |                          required by a bound introduced by this call
23 | |         let _ = &captured;
24 | |         ArcFreeExplicit::pure(x + 1)
25 | |     });
   | |_____^ `Rc<i32>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/arc_free_explicit_bind_requires_send.rs:22:28: 22:41}`, the trait `Send` is not implemented for `Rc<i32>`
note: required because it's used within this closure
  --> tests/ui/arc_free_explicit_bind_requires_send.rs:22:28
   |
22 |     let _bound = program.bind(move |x: i32| {
   |                               ^^^^^^^^^^^^^
note: required by a bound in `ArcFreeExplicit::<'a, F, A>::bind`
  --> src/types/arc_free_explicit.rs
   |
   |         pub fn bind<B: 'a>(
   |                ---- required by a bound in this associated function
   |             self,
   |             f: impl Fn(A) -> ArcFreeExplicit<'a, F, B> + Send + Sync + 'a,
   |                                                          ^^^^ required by this bound in `ArcFreeExplicit::<'a, F, A>::bind`

error[E0277]: `Rc<i32>` cannot be shared between threads safely
  --> tests/ui/arc_free_explicit_bind_requires_send.rs:22:28
   |
22 |       let _bound = program.bind(move |x: i32| {
   |                            ---- ^------------
   |                            |    |
   |  __________________________|____within this `{closure@$DIR/tests/ui/arc_free_explicit_bind_requires_send.rs:22:28: 22:41}`
   | |                          |
   | |                          required by a bound introduced by this call
23 | |         let _ = &captured;
24 | |         ArcFreeExplicit::pure(x + 1)
25 | |     });
   | |_____^ `Rc<i32>` cannot be shared between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/arc_free_explicit_bind_requires_send.rs:22:28: 22:41}`, the trait `Sync` is not implemented for `Rc<i32>`
note: required because it's used within this closure
  --> tests/ui/arc_free_explicit_bind_requires_send.rs:22:28
   |
22 |     let _bound = program.bind(move |x: i32| {
   |                               ^^^^^^^^^^^^^
note: required by a bound in `ArcFreeExplicit::<'a, F, A>::bind`
  --> src/types/arc_free_explicit.rs
   |
   |         pub fn bind<B: 'a>(
   |                ---- required by a bound in this associated function
   |             self,
   |             f: impl Fn(A) -> ArcFreeExplicit<'a, F, B> + Send + Sync + 'a,
   |                                                                 ^^^^ required by this bound in `ArcFreeExplicit::<'a, F, A>::bind`
